# Project-Vortex

./: CMakeLists.txt  README.md  resources.qrc
frontend/: app.js  index.html  style.css
modules/: sample_invert_module.cpp
src/: ImageController.cpp  ImageController.h  MainWindow.cpp  MainWindow.h  ModuleManager.cpp  ModuleManager.h  module_api.h
